data/all_generated_tests/raw_wast_tests/call_indirect_TypeMismatchinControlFlowInstructions_4544.wast
;; 3. **Test Description**: Use `call_indirect` to call a function within a loop where the type signature of the function does not match the expected type signature of the loop's input and output types.    - **Constraint**: Confirms that any type mismatch within looping constructs causes the module to trap.    - **Relation**: Ensures type-checking within control flow loops that use indirect calls.

(assert_invalid
  (module
    (type $sig_valid (func (param i32) (result i32)))
    (type $sig_invalid (func (param i64) (result i32)))
    (func $func (param i32) (result i32) (i32.const 42))
    (table funcref (elem $func))
    (func (param i32) (result i32)
      (loop $label
        (call_indirect (type $sig_invalid) (local.get 0))
        (br_if $label (i32.const 1))
      )
    )
  )
  "type mismatch"
)